--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,14 @@ body {
 /* HEADER */
 
 .header {
+  display: flex;
+  /* put items in one line */
+  align-items: center;
+  /* adjust horizantal positioning , put as much space between flex items */
+  justify-content: space-between;
+  width: 1150px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .logo {
