--- a/styles.css
+++ b/styles.css
@@ -74,3 +74,81 @@ body {
   font-weight: 500;
   font-size: 14 px;
 }
+
+/* MAIN */
+
+.main {
+  text-align: center;
+  margin-top: 300px;
+  animation: fade-in 0.5s 0.1s backwards;
+}
+
+.heading {
+  font-size: 64px;
+  font-weight: 800;
+  margin-bottom: 25px;
+  max-width: 550px;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 0.9;
+}
+
+.text {
+  font-size: 24px;
+  max-width: 630px;
+  margin-left: auto;
+  margin-right: auto;
+  opacity: 0.8;
+  line-height: 1.5;
+}
+
+.text--bols {
+  font-weight: 800;
+}
+
+.form {
+  margin-top: 60px;
+}
+
+.input {
+  width: 511px;
+  height: 64px;
+  border: none;
+  padding: 0;
+  border-radius: 5px;
+  opacity: 0.8;
+  padding-left: 40px;
+  font-size: 19px;
+  font: inherit;
+  outline: none; /* find replacement */
+}
+.input:focus {
+  opacity: 1;
+  transition: all 0.5s;
+}
+
+.input::placeholder {
+  color: black;
+  font-size: 18px;
+}
+
+.btn {
+  border: none;
+  padding: 0;
+  background-color: black;
+  height: 64px;
+  width: 133px;
+  margin-left: 5px;
+  color: #ffffff;
+  font: inherit;
+  font-size: 18px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 500;
+  transform: all 0.4s;
+}
+
+.btn:hover {
+  cursor: pointer;
+  background-color: #161616;
+}
