--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   line-height: 0.9;
+  padding-top: 10px;
 }
 
 .text {
@@ -177,6 +178,7 @@ body {
   border-top: 1px solid rgba(255, 255, 255, 0.4);
   padding-top: 10px;
   color: rgba(255, 255, 255, 0.6);
+  animation: fade-in 0.5s 0.3s backwards;
 }
 
 .copyright {
